01-container-platform/k8s/cks/serviceaccount-exposure.yml
apiVersion: v1
kind: Namespace
metadata:
  name: k97
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-list
  namespace: k97
spec:
  serviceAccountName: sa-api
  containers:
    - name: pods-operation
      image: alpine/curl:3.14
      command:
        [
          "sh",
          "-c",
          'while true; do if curl -s -o /dev/null -k -m 5 -H "Authorization: Bearer $(cat /var/run/secrets/kubernetes.io/serviceaccount/token)" https://kubernetes.default.svc.cluster.local/api/v1/namespaces/k75/pods; then echo "[SUCCESS] Listing Pods..."; else echo "[ERROR] Listing Pods..."; fi; sleep 10; done',
        ]
---
apiVersion: v1
kind: Pod
metadata:
  name: configmap-list
  namespace: k97
spec:
  serviceAccountName: sa-api
  containers:
    - name: configmaps-operation
      image: alpine/curl:3.14
      command:
        [
          "sh",
          "-c",
          'while true; do if curl -s -o /dev/null -k -m 5 -H "Authorization: Bearer $(cat /var/run/secrets/kubernetes.io/serviceaccount/token)" https://kubernetes.default.svc.cluster.local/api/v1/namespaces/k75/configmaps; then echo "[SUCCESS] Listing ConfigMaps..."; else echo "[ERROR] Listing ConfigMaps..."; fi; sleep 10; done',
        ]
