01-container-platform/k8s/cks/ingress-tls.yml
apiVersion: v1
kind: Namespace
metadata:
  name: t75
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: t75
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: accounting-service
  namespace: t75
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
# Generate a self-signed certificate for the Ingress

# Create a Kubernetes secret with the certificate and key
# kubectl create secret tls accounting-secret \
#  --cert=accounting.crt \
#  --key=accounting.key \
#  --namespace=t75

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: accounting-ingress
  namespace: t75
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - accounting.internal.acme.com
      secretName: accounting-secret
  rules:
    - host: accounting.internal.acme.com
      http:
        paths:
          - path: /accounting
            pathType: Prefix
            backend:
              service:
                name: accounting-service
                port:
                  number: 80
